# solana-mint-generator

./: .gitignore  Anchor.toml  DIAGRAM.txt  Makefile  README.md  generate-erd.js  package.json  tsconfig.json
.github/workflows/: publish-docs.yml  release.yml  test-soteria.yml  test.yml
cli/: cli.ts  utils.ts
cli/actions/: mint.ts  mintToUsers.ts  releaseTokens.ts
cli/authorization/: consolidateAuthorizations.ts  setMintPhaseAuthorizations.ts
cli/compressed/: createMerkleTree.ts  delegateMerkleTreeForMint.ts
cli/metadata/: checkMints.ts  createMintConfigCollectionMint.ts  createNumberedUris.ts  createRuleset.ts  (+4 more)
programs/mint-generator/: Cargo.toml
programs/mint-generator/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/mint-generator/src/authorization/: close_mint_phase_authorization.rs  mod.rs  set_mint_phase_authorization.rs
programs/mint-generator/src/instructions/: mint.rs  mod.rs  release_output_mint.rs  set_mint_entry.rs
programs/mint-generator/src/mint_config/: close_mint_config.rs  init_mint_config.rs  mod.rs  set_mint_config_metadata.rs  update_mint_config.rs
sdk/: accounts.ts  api.ts  constants.ts  index.ts  pda.ts  utils.ts
tests/: test-init-update.test.ts  test-mint-10k.test-long.ts  test-mint-batch.test.ts  test-mint-cnft.test.ts  test-mint-pnft-payment-authorization-sol-collection.test.ts  test-mint-pnft-payment-authorization-sol.test.ts  test-mint-pnft-payment-authorization.test.ts  test-mint-pnft-payment.test.ts  test-mint-pnft.test.ts  test-mint-release.test.ts  test-mint-replace-entry.test.ts  test-mint.test.ts  utils.ts
(+9 files in other folders)
