[package]
name = "mint-generator"
version = "0.1.0"
description = "NFT mint-generator."
repository = "https://github.com/solana-reference/solana-mint-generator"
license = "AGPL-3.0"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = "0.26.0"
solana-program = "1.10.41"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.9.0", features = ["no-entrypoint"] }
mpl-bubblegum = { version = "0.7.0", features = ["no-entrypoint", "cpi"] }
spl-account-compression = { version = "0.1.0", features = ["no-entrypoint"] }
spl-associated-token-account = "1.1.2"
solana-security-txt = "1.0.1"
arrayref = "0.3.6"
borsh = "0.9.2"
